# codexOS

./: .gitignore  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
assets/media/: narration.txt  narration.vtt
boot/uefi-loader/: Cargo.toml
boot/uefi-loader/src/: allocator.rs  main.rs
docs/: debugging.md  processes.md  release-security.md
kernel/: Cargo.toml
kernel-image/: Cargo.toml  linker.ld
kernel-image/src/: main.rs
kernel/src/: allocator.rs  block.rs  boot.rs  desktop.rs  fs.rs  hardware.rs  input.rs  interrupts.rs  lib.rs  memory.rs  network.rs  process.rs  scheduler.rs  serial.rs  user_elf.rs  vm.rs
libs/boot-runtime/: Cargo.toml
libs/boot-runtime/src/: lib.rs
libs/bootinfo/: Cargo.toml
libs/bootinfo/src/: lib.rs
libs/desktop-runtime/: Cargo.toml
libs/desktop-runtime/src/: lib.rs
libs/gfx/: Cargo.toml
libs/gfx/src/: lib.rs
libs/heap-allocator/: Cargo.toml
libs/heap-allocator/src/: lib.rs
libs/update-format/: Cargo.toml
libs/update-format/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
