[workspace]
members = [
    "boot/uefi-loader",
    "kernel-image",
    "kernel",
    "libs/bootinfo",
    "libs/gfx",
    "xtask",
]
default-members = ["xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Codex + user"]

[workspace.dependencies]
anyhow = "1.0.102"
bootinfo = { path = "libs/bootinfo" }
fatfs = "0.3.6"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
gfx = { path = "libs/gfx" }
kernel = { path = "kernel" }
uefi = "0.36.1"
xmas-elf = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
