[workspace]
members = [
    "boot/uefi-loader",
    "libs/desktop-runtime",
    "kernel-image",
    "kernel",
    "libs/boot-runtime",
    "libs/bootinfo",
    "libs/gfx",
    "libs/heap-allocator",
    "libs/update-format",
    "xtask",
]
default-members = ["xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Codex + user"]

[workspace.dependencies]
anyhow = "1.0.102"
boot-runtime = { path = "libs/boot-runtime" }
bootinfo = { path = "libs/bootinfo" }
desktop-runtime = { path = "libs/desktop-runtime" }
fatfs = "0.3.6"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
gfx = { path = "libs/gfx" }
heap-allocator = { path = "libs/heap-allocator" }
kernel = { path = "kernel" }
codex-release = { path = "libs/update-format" }
uefi = "0.36.1"
xmas-elf = "0.10.0"
sha2 = { version = "0.10.9", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["zeroize"] }
getrandom = "0.3.4"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = 0
lto = "fat"
panic = "abort"
strip = "symbols"
