[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
boot-runtime.workspace = true
bootinfo.workspace = true
desktop-runtime.workspace = true
gfx.workspace = true
heap-allocator.workspace = true
sha2.workspace = true

[lib]
path = "src/lib.rs"
