[package]
name = "uefi-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
handoff = []
chainload = []

[dependencies]
boot-runtime.workspace = true
bootinfo.workspace = true
desktop-runtime.workspace = true
uefi = { workspace = true, features = ["alloc", "panic_handler"] }
xmas-elf.workspace = true
